--- a/css/style.scss
+++ b/css/style.scss
@@ -6,6 +6,7 @@
 @import "bootstrap/buttons";
 
 $mainColor: #AFD4C7;
+$breakPoint: 992px;
 
 body {
 	background: #eee;
@@ -22,6 +23,12 @@ body {
 	max-width: 1100px;
 }
 
+.flex-container {
+	@media (min-width: $breakPoint) {
+		display: flex;
+	}
+}
+
 a {
 	color: inherit;
 
@@ -35,8 +42,11 @@ img {
 }
 
 h1 {
+	@media (min-width: $breakPoint) {
+		font-size: 55px;
+	}
+	font-size: 40px;
 	text-transform: uppercase;
-	font-size: 55px;
 	font-weight: 600;
 	margin: 40px 0 0 0;
 	line-height: 48px;
@@ -51,8 +61,10 @@ h1 {
 div.caption {
 	font-family: 'Quicksand', sans-serif;
 	font-size: 20px;
-	margin-left: 22px;
 	color: #666;
+	@media (min-width: $breakPoint) {
+		margin-left: 22px;
+	}
 }
 
 h2 {
@@ -72,24 +84,18 @@ h2.beam {
     color: #fff;
 }
 
-.container-fluid {
-	padding: 0;
-}
-
 .pad {
-	padding: 30px;
+	padding: 30px 0;
+	@media (min-width: $breakPoint) {
+		padding: 30px;
+	}
 }
 
 #main {
 	min-height: 100%;
-
-	> section {
-		min-height: 100%;
-		background: #fff;
-	}
 }
 
-#main > aside {
+#sidebar {
 
 	min-height: 100%;
 	background: $mainColor;
@@ -129,14 +135,23 @@ h2.beam {
 }
 
 .year {
-	display: inline-block;
+	display: none;
 	float: right;
 	font-weight: bold;
+
+	@media (min-width: 530px) {
+		display: inline-block;
+	}
 }
 
-#main > section {
+#content-area {
+	min-height: 100%;
+	background: #fff;
+
 	.intro {
-		text-align: justify;
+		@media (min-width: 768px) {
+			text-align: justify;
+		}
 		margin-top: 40px;
 	}
 
@@ -153,7 +168,9 @@ h2.beam {
 		}
 
 		.description {
-			text-align: justify;
+			@media (min-width: 768px) {
+				text-align: justify;
+			}
 		}
 	}
 
